--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "cd client && npm install",
     "build2": "cd client && npm install react-scripts",
-    "heroku-postbuild": "npm run build2 && npm run build",
+    "install-client": "cd client && npm run build",
+    "heroku-postbuild": "npm run build2 && npm run install-client && npm run build",
     "start": "nodemon index",
     "client": "cd client && npm run dev"
   },
