--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "cd client && npm install",
     "build2": "cd client && npm install vite --no-save",
     "install-client": "cd client && npm run build",
-    "heroku-postbuild": "cd client && npm install vite && npm run build",
+    "heroku-postbuild": "npm run build2 && npm run install-client && npm run build",
     "start": "nodemon index",
     "client": "cd client && npm run dev"
   },
