--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "cd client && npm install",
     "build2": "cd client && npm install vite --no-save",
     "install-client": "cd client && npm run build",
-    "heroku-postbuild": "npm run build2  && npm run build && npm run install-client ",
+    "heroku-postbuild": "cd client && npm install --legacy-peer-deps && npm run build && cp -R dist ../public",
     "start": "nodemon index",
     "client": "cd client && npm run dev"
   },
