--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cd client && npm install",
     "build2": "cd client && npm install vite",
-    "install-client": "npm run build",
+    "install-client": "cd client && npm run build",
     "heroku-postbuild": "npm run build2 && npm run install-client ",
     "start": "nodemon index",
     "client": "cd client && npm run dev"
