--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build1": "cd client && npm install ",
+    "build": "cd client && npm install",
     "build2": "cd client && npm install vite",
     "install-client": "cd client && npm run build",
-    "heroku-postbuild": "npm run build1 && npm run build2 && npm run install-client ",
+    "heroku-postbuild": "npm run build2 && npm run install-client && npm run build",
     "start": "nodemon index",
     "client": "cd client && npm run dev"
   },
