--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "three": "^0.153.0",
-    "valtio": "^1.10.5"
+    "valtio": "^1.10.5",
+    "vite": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -30,7 +31,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9"
+    "tailwindcss": "^3.3.2"
   }
 }
