--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9",
-    "vite-plugin-react": "^1.2.0"
+    "vite": "^4.3.9"
   }
 }
