--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "three": "^0.153.0",
     "valtio": "^1.10.5",
     "vite": "^4.3.9"
