--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "three": "^0.153.0",
-    "valtio": "^1.10.5",
-    "vite": "^4.3.9"
+    "valtio": "^1.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -32,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.9"
   }
 }
